--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   font-family: 'Homemade Apple', cursive;
   font-weight: 100;
   margin-top: 0px;
+  justify-content: space-around;
 }
 
 h1 {
@@ -26,6 +27,8 @@ h1 {
   font-family: 'Homemade Apple', cursive;
   padding: 25px;
   font-size: 40px;
+  justify-content: space-around;
+  width: auto;
 
 }
 
@@ -43,7 +46,8 @@ h2 {
 
 img {
   height: 300px;
-  margin: 3px;
+  width: 200px;
+  margin: 5px;
 }
 
 .all-images {
