--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #FFD6FC;
+  background: seashell;
 }
 
 .london {
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-  color: orchid;
+  color: black;
   background-color: seashell;
   text-align: center;
   font-family: 'Homemade Apple', cursive;
@@ -48,12 +48,15 @@ img {
   height: 300px;
   width: 200px;
   margin: 5px;
+  object-fit: cover;
+
 }
 
 .all-images {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  background-color: seashell;
 
 }
 
@@ -65,9 +68,25 @@ img {
   }
 }
 
-@media screen and (max-width: 600px) {
-  .all-images {
 
+.paris-head {
+  background-color: #E0BBE4;
+}
 
-  }
+.london-head {
+  background-color: #FF8D87;
+
+}
+
+.italy-head {
+  background-color: #c9c9ff;
+
+}
+
+.bud-head {
+  background-color: #FFC36D;
+}
+
+.bar-head {
+  background-color: #b19cd9;
 }
